RockWeb/Themes/Rock/Styles/group-scheduler.less
/* ... */
.board-card:hover {
  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .1);
}
.board-card-photo {
  position: relative;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  vertical-align: top;
  background: ~"center/cover #cbd4db";
  border-radius: 50%;
  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .07);
}
.board-card-assigned {
  font-size: 12px;
}
.board-card-pills {
  display: flex;
  flex-flow: row wrap;
  align-content: space-between;
  margin: -5px -5px 0;
  margin-bottom: 10px;
}
.board-card-pill {
  width: 42px;
  height: 6px;
  margin: 5px 5px 0;
  background-color: #7a6ff0;
  border-radius: 3px;
}
.board-card-meta {
  font-size: 11px;
}
.dropdown-menu-mega {
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 2000;
  width: 300px;
  overflow-y: scroll;
}
.dropdown-menu-mega li {
  position: relative;
}
.dropdown-menu-mega .dropdown-header {
  padding: 8px 0;
  margin: 24px 16px 4px;
  font-size: 16px;
  font-weight: 700;
  color: #484848;
  border-bottom: 1px solid #e4e4e4;
}
.dropdown-menu-mega .dropdown-header:first-child {
  margin-top: 0;
}

.styled-scroll ::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.styled-scroll ::-webkit-scrollbar-thumb {
  width: 8px;
  width: 8px;
}

